encapsulate .btn-group.btn html into div and fix tooltips visibility

--- a/css/legacy/includes/_styles.scss
+++ b/css/legacy/includes/_styles.scss
@@ -194,7 +194,7 @@
      }
    }
 
-   .invisible {
+   .invisible, .tooltip-invisible {
      display: none;
    }
 
